# imageSearch

./: .gitignore  CMakeLists.txt  INSTALL  config.h
backend/: BLImage.h  Backend.cc  Backend.h  BinaryScoreTableSerializer.cc  BinaryScoreTableSerializer.h  BitArrayScoreTable.cc  BitArrayScoreTable.h  CMakeLists.txt  DBImage.h  Database.h  DbBasedImageSearchBackend.cc  DbBasedImageSearchBackend.h  Image.h  ImageFeatures.h  ImageScore.h  ImageSearchBackend.cc  ImageSearchBackend.h  PostgresQl.cc  PostgresQl.h  PreSelectScoreTable.cc  PreSelectScoreTable.h  ReadOnlyImage.h  ScoreTable.cc  ScoreTable.h  ScoreTableFactory.cc  ScoreTableFactory.h  ScoreTableSerializer.h  SerializationBasedImageSearchBackend.cc  SerializationBasedImageSearchBackend.h  TextScoreTableSerializer.cc  TextScoreTableSerializer.h  UrlCreatingStrategy.h  UrlPrefixStrategy.cc  UrlPrefixStrategy.h  config.h  macros.h  util.cc  util.h
backend/postgresql/: PgInsert.h  PgSelect.cc  PgSelect.h  PgSelectCount.h  PostgresQl.cc  PostgresQl.h
data/: TODO
doc/hackerTalk/: beamercolorthemefdc.sty  beamerthemeFdc-old.sty  beamerthemeFdc.sty  hackerTalk.tex
importer/: CMakeLists.txt  create_table.sql  dbBasedMain.cc  import_covers.sh  import_dehdabehs.sh  import_shirts.sh  main.cc  serializationBasedMain.cc
webapp/: CMakeLists.txt  Div.cc  Div.h  ImageSearch.cc  ImageSearch.h  SearchResult.cc  SearchResult.h  imageSearch.css  main.cc  mk_thumbnail.sh  run_app.sh  run_app_dehdabehs.sh  run_app_shirts.sh
