INCLUDE_DIRECTORIES(
	${IMAGESEARCH_SOURCE_DIR}/backend
  )
ADD_LIBRARY(Backend
	ImageSearchBackend.cc
	DbBasedImageSearchBackend.cc
	SerializationBasedImageSearchBackend.cc
	ScoreTable.cc
	BinaryScoreTableSerializer.cc
	TextScoreTableSerializer.cc
	PreSelectScoreTable.cc
	postgresql/PostgresQl.cc
	postgresql/PgSelect.cc
  )
